--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="row justify-content-center">
                 <!-- Bride Column -->
                 <div class="col-md-5 text-center">
-                    <img src="assets/img/gallery/Bride.jpg" alt="Bride" class="img-fluid rounded mb-3">
+                    <img src="assets/img/gallery/Bride.JPG" alt="Bride" class="img-fluid rounded mb-3">
                     <h4 class="mt-2">Bhuvaneshwari</h4>
                     <h5>B.Tech, MBA</h5>
                     <p>Graceful and radiant, Bhuvaneshwari lights up every room she enters. A dynamic digital marketing professional based in Chennai, she holds an MBA from Anna University and is soaring high in her career with passion and purpose.</p>
@@ -127,7 +127,7 @@
 
                 <!-- Groom Column -->
                 <div class="col-md-5 text-center">
-                    <img src="assets/img/gallery/Groom.jpg" alt="Groom" class="img-fluid rounded mb-3">
+                    <img src="assets/img/gallery/Groom.JPG" alt="Groom" class="img-fluid rounded mb-3">
                     <h4 class="mt-2">Akilan</h4>
                     <h5>M.Tech</h5>
                     <p>Energetic and full of life, Akilan brings laughter and adventure wherever he goes. An M.Tech graduate from NIT Surathkal, he works in the biotech sector in Pune. Whether he's revving up his bike, cheering for his favorite cricket team, or planning his next trip, there's never a dull moment with him around.</p>
@@ -151,15 +151,15 @@
                 </div>
             </div>
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
+                    <div class="col-lg-8 px-4 text-center mx-auto">
                         <div class="story-details py-4">
                             <p style="color: black; font-weight: bold; font-size: clamp(1.2rem, 2.5vw, 2rem); line-height: 1.6; max-width: max-content; margin: 0 auto;">
-                            <span style="white-space: nowrap; display: block; text-align: center;">
-                                அன்புற்று அமர்ந்த வழக்கென்ப வையகத்து
-                            </span>
-                            <span style="white-space: nowrap; display: block; text-align: left;">
-                                இன்புற்றார் எய்தும் சிறப்பு.
-                            </span>
+                                <span style="white-space: nowrap; display: block; text-align: center;">
+                                    அன்புற்று அமர்ந்த வழக்கென்ப வையகத்து
+                                </span>
+                                <span style="white-space: nowrap; display: block; text-align: left;">
+                                    இன்புற்றார் எய்தும் சிறப்பு.
+                                </span>
                             </p>
                             <p style="color: black; font-size: clamp(1.2rem, 2.5vw, 2rem); line-height: 1.6;">
                                 - திருவள்ளுவர்
