--- a/index.html
+++ b/index.html
@@ -150,23 +150,18 @@
                     </div>
                 </div>
             </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 px-4 text-center mx-auto">
-                        <div class="story-details py-4">
-                            <p style="color: black; font-weight: bold; font-size: clamp(1.2rem, 2.5vw, 2rem); line-height: 1.6; max-width: max-content; margin: 0 auto;">
-                                <span style="white-space: nowrap; display: block; text-align: center;">
-                                    அன்புற்று அமர்ந்த வழக்கென்ப வையகத்து
-                                </span>
-                                <span style="white-space: nowrap; display: block; text-align: left;">
-                                    இன்புற்றார் எய்தும் சிறப்பு.
-                                </span>
-                            </p>
-                            <p style="color: black; font-size: clamp(1.2rem, 2.5vw, 2rem); line-height: 1.6;">
-                                - திருவள்ளுவர்
+            <div class="row justify-content-center">
+                <div class="col-lg-8 px-4 text-center mx-auto">
+                    <div class="story-details py-4">
+                        <div style="display: inline-block; text-align: left; font-size: clamp(1rem, 2vw, 1.5rem); line-height: 1.6; color: black; font-weight: bold;">
+                            <p style="margin: 0;"> <strong>
+                                "அன்புற்று அமர்ந்த வழக்கென்ப வையகத்து<br>
+                                இன்புற்றார் எய்தும் சிறப்பு."</strong>
                             </p>
                         </div>
                     </div>
                 </div>
+            </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-5">
                         <div class="story-img">
