--- a/index.html
+++ b/index.html
@@ -150,18 +150,13 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8 px-4 text-center mx-auto">
-                    <div class="story-details py-4">
-                        <div style="display: inline-block; text-align: left; font-size: clamp(1rem, 2vw, 1.5rem); line-height: 1.6; color: black; font-weight: bold;">
-                            <p style="margin: 0;"> <strong>
-                                "அன்புற்று அமர்ந்த வழக்கென்ப வையகத்து<br>
-                                இன்புற்றார் எய்தும் சிறப்பு."</strong>
-                            </p>
+                <div class="row justify-content-center">
+                    <div class="col-lg-5">
+                        <div class="story-img">
+                            <img class="story1" src="assets/img/gallery/Tirukkural.png" alt="">
                         </div>
                     </div>
                 </div>
-            </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-5">
                         <div class="story-img">
